--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 *{
     margin: 0;
     padding: 0;
+    font-family: 'Montserrat', sans-serif;
 }
 body{
     background-color:#360369;
@@ -50,7 +52,7 @@ body{
     padding-left: 40px;
     gap:10px;
     align-items: flex-start;
-    margin-bottom: 100px;
+    /* margin-bottom: 100px; */
 }
 .top>h1{
      font-size: 54px;
@@ -63,22 +65,16 @@ body{
     margin-top: 20px;
 }
 .map-container{
-    /* align-self: center; */
     margin-top: 30px;
-    /* margin-left: 20px; */
     width: 90vw;
-    height: 40vh;
-}
-.map-container>img{
-    width:100%;
-    /* height: 100%; */
+    height: 400px;
 }
 span{
     border-radius: 10px;
     background: #270846;
     padding:10px 20px;
     border:none;
-    font-size: 36px;
+    font-size: 30px;
     margin:10px;
 }
 .bottom{
@@ -103,3 +99,41 @@ span{
     justify-content: start;
     color: #fff;
 }
+@media screen and (max-width:500) {
+
+.top>h1{
+     font-size: 36px;
+}
+.top>p{
+    font-size: 24px;
+    color:darkgray;
+}
+span{
+    font-size: 24px;
+
+}
+.bottom>h1{
+    color:#360369;
+    font-size: 36px;
+    font-weight: 700;
+}
+}
+@media screen and (max-width:900) and(min-width:500){
+
+    .top>h1{
+         font-size: 48px;
+    }
+    .top>p{
+        font-size: 24px;
+        color:darkgray;
+    }
+    span{
+        font-size: 24px;
+    
+    }
+    .bottom>h1{
+        color:#360369;
+        font-size: 48px;
+        font-weight: 700;
+    }
+    }
