--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body{
     background-color:#360369;
     display: flex;
     flex-direction: column;
-    flex-wrap:wrap;
+    /* flex-wrap:wrap; */
     padding:20px;
     padding-left: 40px;
     gap:10px;
@@ -102,38 +102,52 @@ span{
 @media screen and (max-width:500) {
 
 .top>h1{
-     font-size: 36px;
+     font-size: 24px;
 }
 .top>p{
-    font-size: 24px;
+    font-size: 18px;
     color:darkgray;
 }
 span{
-    font-size: 24px;
+    font-size: 18px;
 
 }
 .bottom>h1{
     color:#360369;
-    font-size: 36px;
+    font-size: 24px;
     font-weight: 700;
+}
+.weather-data{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    /* padding:5px; */
 }
 }
 @media screen and (max-width:900) and(min-width:500){
 
     .top>h1{
-         font-size: 48px;
+         font-size: 36px;
     }
     .top>p{
-        font-size: 24px;
+        font-size: 18px;
         color:darkgray;
     }
     span{
-        font-size: 24px;
+        font-size:18px;
     
     }
     .bottom>h1{
         color:#360369;
-        font-size: 48px;
+        font-size: 36px;
         font-weight: 700;
+    }
+    .weather-data{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        /* padding:5px; */
     }
     }
